fixed bugs on the layout shift section

--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities; */
 
-@import url('https://fonts.googleapis.com/css2?family=Flow+Circular&family=Inter:wght@100&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Flow+Circular&display=swap');
 
 :root {
   --color-gray-200: #e5e7eb;
@@ -42,10 +42,22 @@
 
 @keyframes composites {
   from {
-    inline-size: 19.2rem;
+    inline-size: 80%;
   }
 
   to {
-    inline-size: 24rem;
+    inline-size: 100%;
+  }
+}
+
+@media (min-width: 480px) {
+  @keyframes composites {
+    from {
+      inline-size: 19.2rem;
+    }
+  
+    to {
+      inline-size: 24rem;
+    }
   }
 }
